grammar.js
    compilation_unit: $ => seq(
      repeat($.extern_alias_directive),
      repeat($.using_directive),
      repeat($.global_attribute_list),
      repeat($._member_declaration)
    ),

    _member_declaration: $ => choice(
      $._base_field_declaration,
      $.class_declaration,
      // $._base_method_declaration,
      // $._base_namespace_declaration,
      // $._base_property_declaration,
      // $._base_type_declaration,
      // $._delegate_declaration,
      // $._enum_member_declaration,
      $._global_statement
    ),

    _name: $ => choice(
      $.alias_qualified_name,
      $.qualified_name,
      $._simple_name
    ),

    generic_name: $ => seq($._identifier_token, $.type_argument_list),

    // Intentionally different from Roslyn to avoid non-matching
    // omitted_type_argument in a lot of unnecessary places.
    type_argument_list: $ => seq(
      '<',
      choice(
        repeat(','),
        commaSep1($._type),
      ),
      '>'
    ),

    modifier: $ => choice(
      'abstract',
      'async',
      'const',
      'extern',
      'file',
      'fixed',
      'internal',
      'new',
      'override',
      'partial',
      'private',
      'protected',
      'public',
      'readonly',
      // 'ref', // `ref` as a modifier can only be used on struct declarations. Other than that it's a ref type or a ref parameter in a declaration.
      'required',
      // 'scoped', // `scoped` is either part of a scoped type or a scoped parameter. Both of which are handled outside of `modifier`.
      'sealed',
      'static',
      'unsafe',
      'virtual',
      'volatile'
    ),

    variable_declaration: $ => seq(
      field('type', $._type),
      commaSep1($.variable_declarator)
    ),

    variable_declarator: $ => seq(
      //choice(
      $._identifier_token
      //, $.tuple_pattern),
      ,
      optional($.bracketed_argument_list),
      optional($.equals_value_clause)
    ),

    field_declaration: $ => seq(
      repeat($.attribute_list),
      repeat($.modifier),
      $.variable_declaration,
      ';'
    ),

    // constructor_declaration: $ => seq(
    //   repeat($.attribute_list),
    //   repeat($.modifier),
    //   field('name', $.identifier),
    //   field('parameters', $.parameter_list),
    //   optional($.constructor_initializer),
    //   $._function_body
    // ),

    // Params varies quite a lot from grammar.txt as that handles neither 'out' nor 'params' or arrays...

    // parameter_list: $ => seq(
    //   '(',
    //   optional($._formal_parameter_list),
    //   ')'
    // ),

    // _formal_parameter_list: $ => commaSep1(choice(
    //   $.parameter,
    //   $._parameter_array
    // )),

    // parameter: $ => prec.dynamic(PREC.PARAMETER, seq(
    //   repeat($.attribute_list),
    //   optional(alias(choice('ref', 'out', 'this', 'in'), $.parameter_modifier)),
    //   optional(field('type', $._type)), // todo: why is this optional?
    //   field('name', $.identifier),
    //   optional($.equals_value_clause)
    // )),

    // parameter_modifier: $ => choice('ref', 'out', 'this', 'in'),

    // _parameter_array: $ => seq(
    //   repeat($.attribute_list),
    //   'params',
    //   choice($.array_type, $.nullable_type),
    //   field('name', $.identifier),
    // ),

    // constructor_initializer: $ => seq(
    //   ':',
    //   choice('base', 'this'),
    //   $.argument_list
    // ),

    class_declaration: $ => seq(
      repeat($.attribute_list),
      repeat($.modifier),
      'class',
      field('name', $._identifier_token),
      //field('type_parameters', optional($.type_parameter_list)),
      //field('bases', optional($.base_list)),
      //repeat($.type_parameter_constraints_clause),
      field('body', $.declaration_list),
      optional(';')
    ),

    declaration_list: $ => seq(
      '{',
      repeat($._member_declaration),
      '}'
    ),

    // interface_declaration: $ => seq(
    //   repeat($.attribute_list),
    //   repeat($.modifier),
    //   'interface',
    //   field('name', $.identifier),
    //   field('type_parameters', optional($.type_parameter_list)),
    //   field('bases', optional($.base_list)),
    //   repeat($.type_parameter_constraints_clause),
    //   field('body', $.declaration_list),
    //   optional(';')
    // ),

    // struct_declaration: $ => seq(
    //   repeat($.attribute_list),
    //   repeat($.modifier),
    //   optional(alias('ref', $.modifier)),
    //   'struct',
    //   field('name', $.identifier),
    //   field('type_parameters', optional($.type_parameter_list)),
    //   field('bases', optional($.base_list)),
    //   repeat($.type_parameter_constraints_clause),
    //   field('body', $.declaration_list),
    //   optional(';')
    // ),

    // delegate_declaration: $ => seq(
    //   repeat($.attribute_list),
    //   repeat($.modifier),
    //   'delegate',
    //   field('type', $._type),
    //   field('name', $.identifier),
    //   field('type_parameters', optional($.type_parameter_list)),
    //   field('parameters', $.parameter_list),
    //   repeat($.type_parameter_constraints_clause),
    //   ';'
    // ),

    // record_declaration: $ => seq(
    //   repeat($.attribute_list),
    //   repeat($.modifier),
    //   'record',
    //   optional('class'),
    //   field('name', $.identifier),
    //   field('type_parameters', optional($.type_parameter_list)),
    //   field('parameters', optional($.parameter_list)),
    //   field('bases', optional(alias($.record_base, $.base_list))),
    //   repeat($.type_parameter_constraints_clause),
    //   field('body', $._record_body),
    //   optional(';')
    // ),

    // record_struct_declaration: $ => seq(
    //   repeat($.attribute_list),
    //   repeat($.modifier),
    //   'record',
    //   'struct',
    //   field('name', $.identifier),
    //   field('type_parameters', optional($.type_parameter_list)),
    //   field('parameters', optional($.parameter_list)),
    //   field('bases', optional(alias($.record_base, $.base_list))),
    //   repeat($.type_parameter_constraints_clause),
    //   field('body', $._record_body),
    //   optional(';')
    // ),

    // record_base: $ => choice(
    //   seq(':', commaSep1($.identifier)),
    //   seq(':', $.primary_constructor_base_type, optional(seq(',', commaSep1($.identifier)))),
    // ),

    // primary_constructor_base_type: $ => seq(
    //   $.identifier,
    //   $.argument_list
    // ),

    // _record_body: $ => choice(
    //   $.declaration_list,
    //   ';'
    // ),

    // namespace_declaration: $ => seq(
    //   'namespace',
    //   field('name', $._name),
    //   field('body', $.declaration_list),
    //   optional(';')
    // ),

    // file_scoped_namespace_declaration: $ => seq(
    //   'namespace',
    //   field('name', $._name),
    //   ';',
    //   repeat($.extern_alias_directive),
    //   repeat($.using_directive),
    //   repeat($._type_declaration)
    // ),

    _type: $ => choice(
      //   implicit_type,
      $.array_type,
      $.function_pointer_type,
      $._name,
      $.nullable_type,
      //   omitted_type_argument
      $.pointer_type,
      $.predefined_type,
      $.ref_type,
      $.scoped_type,
      $.tuple_type,
    ),

    nullable_type: $ => seq($._nullable_base_type, '?'),

    _nullable_base_type: $ => choice(
      $.array_type,
      $._name,
      $.predefined_type,
      $.tuple_type
    ),

    pointer_type: $ => seq($._pointer_base_type, '*'),

    _pointer_base_type: $ => choice(
      //$.array_type,
      $._name,
      $.nullable_type,
      $.pointer_type,
      $.function_pointer_type,
      $.predefined_type,
      $.tuple_type
    ),

    function_pointer_type: $ => seq(
      'delegate',
      '*',
      optional($.function_pointer_calling_convention),
      $.function_pointer_parameter_list
    ),

    function_pointer_calling_convention: $ => choice(
      'managed', // function_pointer_unmanaged_calling_convention_list? is present in Roslyn.
      seq(
        'unmanaged',
        optional($.function_pointer_unmanaged_calling_convention_list)
      )
    ),

    function_pointer_unmanaged_calling_convention_list: $ => seq(
      '[', commaSep1($.function_pointer_unmanaged_calling_convention), ']'
    ),

    function_pointer_unmanaged_calling_convention: $ => $._identifier_token,

    function_pointer_parameter: $ => seq(
      alias(optional('scoped'), $.parameter_modifier),
      optional(alias(choice('ref', 'out', 'in'), $.parameter_modifier)),
      $._ref_base_type
    ),

    predefined_type: $ => choice(
      'bool',
      'byte',
      'char',
      'decimal',
      'double',
      'float',
      'int',
      'long',
      'object',
      'sbyte',
      'short',
      'string',
      'uint',
      'ulong',
      'ushort',
      'nint',
      'nuint',
      'void'
    ),

    ref_type: $ => seq(
      'ref',
      optional('readonly'),
      $._ref_base_type
    ),

    _ref_base_type: $ => choice(
      $.array_type,
      $.function_pointer_type,
      $._name,
      $.nullable_type,
      $.pointer_type,
      $.predefined_type,
      $.tuple_type,
      // $.ref_type,
      // $.scoped_type,
    ),

    tuple_type: $ => seq(
      '(',
      $.tuple_element,
      ',',
      commaSep1($.tuple_element),
      ')'
    ),

    tuple_element: $ => seq(
      field('type', $._type),
      field('name', optional($._identifier_token))
    ),

    _identifier_token: $ => token(seq(optional('@'), /[\p{L}\p{Nl}_][\p{L}\p{Nl}\p{Nd}\p{Pc}\p{Cf}\p{Mn}\p{Mc}]*/)),
    // //identifier: $ => choice($._identifier_token, $._contextual_keywords),

    // //global: $ => 'global',
    // //_identifier_or_global: $ => choice($.global, $.identifier),

    // // Literals - grammar.txt is useless here as it just refs to lexical specification

    comment: $ => token(choice(
      seq('//', /[^\n\r]*/),
      seq(
        '/*',
        /[^*]*\*+([^/*][^*]*\*+)*/,
        '/'
      )
    )),

    // // Custom non-Roslyn additions beyond this point that will not sync up with grammar.txt

    // // Contextual keywords - keywords that can also be identifiers...
    // _contextual_keywords: $ => choice(
    //   // LINQ comprehension syntax
    //   'ascending',
    //   'by',
    //   'descending',
    //   'equals',
    //   'from',
    //   'group',
    //   'into',
    //   'join',
    //   'let',
    //   'on',
    //   'orderby',
    //   'select',
    //   'where',

    //   // Property/event handlers
    //   'add',
    //   'get',
    //   'remove',
    //   'set',

    //   // Async - These need to be more contextual
    //   // 'async',
    //   // 'await',

    //   // Misc
    //   'global',
    //   'alias',
    //   'dynamic',
    //   'nameof',
    //   'notnull',
    //   'unmanaged',
    //   'when',
    //   'yield'
    // ),

    // Preprocessor

    // _preprocessor_call: $ => seq(
    //   $._preproc_directive_start,
    //   choice(
    //     $.nullable_directive,
    //     $.define_directive,
    //     $.undef_directive,
    //     $.if_directive,
    //     $.else_directive,
    //     $.elif_directive,
    //     $.endif_directive,
    //     $.region_directive,
    //     $.endregion_directive,
    //     $.error_directive,
    //     $.warning_directive,
    //     $.line_directive,
    //     $.pragma_directive,
    //     $.reference_directive,
    //     $.load_directive,
    //     $.shebang_directive
    //   ),
    //   $._preproc_directive_end
    // ),

    // _preproc_directive_start: $ => /#[ \t]*/,

    // nullable_directive: $ => seq(
    //   'nullable',
    //   choice('disable', 'enable', 'restore'),
    //   optional(choice('annotations', 'warnings'))
    // ),

    // define_directive: $ => seq('define', $.identifier),
    // undef_directive: $ => seq('undef', $.identifier),
    // if_directive: $ => seq('if', $._preproc_expression),
    // else_directive: $ => 'else',
    // elif_directive: $ => seq('elif', $._preproc_expression),
    // endif_directive: $ => 'endif',
    // region_directive: $ => seq('region', optional($.preproc_message)),
    // endregion_directive: $ => seq('endregion', optional($.preproc_message)),
    // error_directive: $ => seq('error', $.preproc_message),
    // warning_directive: $ => seq('warning', $.preproc_message),
    // line_directive: $ => seq('line',
    //   choice(
    //     'default',
    //     'hidden',
    //     seq($.preproc_integer_literal, optional($.preproc_string_literal)),
    //     seq(
    //       '(', $.preproc_integer_literal, ',', $.preproc_integer_literal, ')',
    //       '-',
    //       '(', $.preproc_integer_literal, ',', $.preproc_integer_literal, ')',
    //       optional($.preproc_integer_literal), $.preproc_string_literal),
    //   )
    // ),
    // pragma_directive: $ => seq('pragma',
    //   choice(
    //     seq('warning',
    //       choice('disable', 'restore'),
    //       commaSep(
    //         choice(
    //           $.identifier,
    //           alias($.preproc_integer_literal, $.integer_literal),
    //         ))),
    //     seq('checksum', $.preproc_string_literal, $.preproc_string_literal, $.preproc_string_literal)
    //   )
    // ),
    // reference_directive: $ => seq('r', $.preproc_string_literal),
    // load_directive: $ => seq('load', $.preproc_string_literal),
    // shebang_directive: $ => seq('!', /[^\n\r]*/),

    // preproc_message: $ => /[^\n\r]+/,
    // preproc_integer_literal: $ => /[0-9]+/,
    // preproc_string_literal: $ => /"[^"]*"/,

    // _preproc_expression: $ => choice(
    //   $.identifier,
    //   $.boolean_literal,
    //   alias($.preproc_integer_literal, $.integer_literal),
    //   alias($.preproc_string_literal, $.verbatim_string_literal),
    //   alias($.preproc_unary_expression, $.prefix_unary_expression),
    //   alias($.preproc_binary_expression, $.binary_expression),
    //   alias($.preproc_parenthesized_expression, $.parenthesized_expression)
    // ),

    // preproc_parenthesized_expression: $ => seq(
    //   '(',
    //   $._preproc_expression,
    //   ')'
    // ),

    // preproc_unary_expression: $ => prec.left(PREC.UNARY, seq(
    //   field('operator', '!'),
    //   field('argument', $._preproc_expression)
    // )),

    // preproc_binary_expression: $ => {
    //   const table = [
    //     ['||', PREC.LOGOR],
    //     ['&&', PREC.LOGAND],
    //     ['==', PREC.EQUAL],
    //     ['!=', PREC.EQUAL],
    //   ];

    //   return choice(...table.map(([operator, precedence]) => {
    //     return prec.left(precedence, seq(
    //       field('left', $._preproc_expression),
    //       field('operator', operator),
    //       field('right', $._preproc_expression)
    //     ))
    //   }));
    // },
  }
})

function commaSep(rule) {
  return optional(commaSep1(rule))
}

function commaSep1(rule) {
  return seq(
    rule,
    repeat(seq(
      ',',
      rule
    ))
  )
}
